refactor: rename DiContext to InjectionContext throughout the project
This commit performs a comprehensive rename of all DiContext-related
classes, interfaces, and references to InjectionContext for better
semantic clarity.

Changes:
- Renamed IDiContext → IInjectionContext
- Renamed IDiContextBuilder → IInjectionContextBuilder
- Renamed IDiContextSupply → IInjectionContextSupply
- Renamed IDiChildContextFactory → IInjectionChildContextFactory
- Renamed DiContext → InjectionContext
- Renamed DiContextBuilder → InjectionContextBuilder
- Renamed DummyDiContext → DummyInjectionContext
- Renamed DiContextTest → InjectionContextTest
- Renamed DiContextBuilderTest → InjectionContextBuilderTest

Updated all references in:
- Source code (95 files modified)
- JavaDoc documentation
- Comments and package-info files
- Test classes

Note: DiException remains unchanged as intended.

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>